<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/uefa_cover"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:adjustViewBounds="true"
            android:scaleType="fitStart"
            android:src="@drawable/fifa19cover" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@android:color/white" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground"
            app:cardElevation="4dp"
            tools:style="@style/CardView">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/aboutInfo"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:fontFamily="@font/open_sans"
                    android:padding="5dp"
                    android:text="@string/site"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:padding="8dp"
                    android:text="@string/publisher_ea_sports"
                    android:textColor="@android:color/black" />
            </LinearLayout>

        </android.support.v7.widget.CardView>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/kaushan_script"
            android:text="@string/available_on"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/headingColor" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:elevation="4dp"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground"
            tools:style="@style/CardView">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitStart"
                android:src="@drawable/platforms" />
        </android.support.v7.widget.CardView>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kaushan_script"
            android:padding="20dp"
            android:text="@string/features"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/headingColor" />


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground"
            app:cardElevation="4dp"
            tools:style="@style/CardView">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/active_touch_img"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitStart"
                    android:src="@drawable/active_touch" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="50dp"
                    android:fontFamily="@font/bangers"
                    android:text="@string/active_touch_system"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/active_touch_img"
                    android:layout_margin="12dp"
                    android:fontFamily="@font/rubik"
                    android:text="@string/Active_touch_info"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />


            </RelativeLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground"
            app:cardElevation="4dp"
            tools:style="@style/CardView">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/real_player_motion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitStart"
                    android:src="@drawable/real_player_motion" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="50dp"
                    android:fontFamily="@font/bangers"
                    android:text="@string/real_player_motion"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/real_player_motion"
                    android:layout_margin="12dp"
                    android:fontFamily="@font/rubik"
                    android:text="@string/real_player_motion_info"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />


            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground"
            app:cardElevation="4dp"
            tools:style="@style/CardView">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitStart"
                    android:src="@drawable/game_cds" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="50dp"
                    android:fontFamily="@font/bangers"
                    android:text="@string/pre_order"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/white" />


            </RelativeLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>


</ScrollView>